force-app/main/default/objects/Apartment__c/fields/Apartment_Image__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Image__c</fullName>
    <formula>IMAGE( Picture__c ,  Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apartment Image</label>
    <type>Text</type>
</CustomField>