force-app/main/default/objects/Apartment__c/fields/ApartmentType__c.field-meta.xml
<CustomField>
    <fullName>ApartmentType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apartment Type</label>
    <referenceTo>ApartmentType__c</referenceTo>
    <relationshipLabel>Apartments</relationshipLabel>
    <relationshipName>Apartments</relationshipName>
    <type>Lookup</type>
</CustomField>