force-app/main/default/objects/Apartment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Length__c</columns>
    <columns>Picture__c</columns>
    <columns>Price__c</columns>
    <columns>Year_Built__c</columns>
    <columns>Apartment_Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>